# autoaim_top_module

./: .gitignore  .gitmodules  Dockerfile  README.md  auto_pull.bash  auto_pull.sh  auto_push.bash  auto_push.sh
.ssh/: config  id_rsa  id_rsa.pub  known_hosts  known_hosts.old
Camera/Data/: 042051420251.mvdat
Camera/log/: warning_20240110-181102.52066
autoaim_bring_up/: CMakeLists.txt  package.xml
autoaim_bring_up/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
autoaim_bring_up/descriptions/urdf/: gimbal_description.urdf.xacro
autoaim_bring_up/launch/: autoaim.launch.py  no_hardware.launch.py  video_debug.launch.py
camera_recorder/: CMakeLists.txt  package.xml
camera_recorder/src/: CameraRecorder.cpp
